--- a/style3.scss
+++ b/style3.scss
@@ -1,4 +1,5 @@
 @import '_mixins';
+@import '_variables';
 * {
     margin: 0;
     padding: 0;
@@ -51,14 +52,13 @@
                 .hamburger-line {
                     width: 30px;
                     height: 4px;
-                    background-color: black;
+                    background-color: $font-color1;
                 }
             }
             #mobile-header-menu {
                 transition: all 0.5s ease-in-out;
                 position: absolute;
                 width: 100%;
-                background-color: burlywood;
                 display: grid;
                 top:-19vh;
                 opacity: 0;
@@ -66,7 +66,7 @@
                 min-height: 19vh;
                 background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
                 a {
-                    color:black;
+                    color:$font-color1;
                     text-decoration: none;
                     font-weight: bold;
 
@@ -104,7 +104,7 @@
             display: none;
         }
         a{
-            color: black;
+            color: $font-color1;
             font-weight: bolder;
             font-size:smaller;
             transition: font-size 0.25s ease-in-out;
@@ -125,7 +125,7 @@
             align-items: center;
             row-gap: 2vh;
             #content2-h2tag,#content2-h3tag, #content2-h4tag,#content2-h5tag,#content2-h5twotag,#content2-h5threetag   {
-                color:#333;
+                color:$font-color2;
                 font-family: 'Quattrocento', serif;
                 text-align: center;
             }
@@ -160,8 +160,8 @@
             align-items: center;
             a {
                 text-decoration: none;
-                background-color: darkred;
-                color: white;
+                background-color: $font-color5;
+                color: $font-color6;
                 padding: 10px;
                 font-size: medium;
             }
@@ -243,13 +243,13 @@
             }
             a {
                 font-size: large;
-                color: white;
+                color: $font-color6;
                 text-decoration: none;
-                background-color: darkred;
+                background-color: $font-color5;
                 padding: 1vh;
                 transition: all 0.25s ease-in-out;
                 &:hover {
-                    background-color: crimson;
+                    background-color: $font-color7;
                 }
             }
           
@@ -297,6 +297,9 @@
                     }
                 }
             }
+            #footerh5-two {
+                margin-left: 10vw;
+            }  
                 
         } 
 
