--- a/style4.css
+++ b/style4.css
@@ -72,7 +72,6 @@
   transition: all 0.5s ease-in-out;
   position: absolute;
   width: 100%;
-  background-color: burlywood;
   display: -ms-grid;
   display: grid;
   top: -19vh;
@@ -342,6 +341,9 @@
   #container #footer #footerdiv-one a img:hover {
     width: 32px;
     height: 32px;
+  }
+  #container #footer #footerh5-two {
+    margin-left: 10vw;
   }
 }
 /*# sourceMappingURL=style4.css.map */
