--- a/style5.css
+++ b/style5.css
@@ -206,14 +206,18 @@
           align-items: center;
   row-gap: 2vh;
   min-height: 280vh;
+  -webkit-column-gap: 2vh;
+          column-gap: 2vh;
 }
 
 #container #content #content-3 #content3-1 img {
-  width: 140px;
-  height: 137px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   border: 2px solid #333;
-  -webkit-box-shadow: 5px 5px 7px grey;
-          box-shadow: 5px 5px 7px grey;
+  -webkit-box-shadow: 1px 1px 2px grey;
+          box-shadow: 1px 1px 2px grey;
 }
 
 #container #footer {
