--- a/style5.scss
+++ b/style5.scss
@@ -183,11 +183,13 @@
                 align-items: center;
                 row-gap: 2vh;
                 min-height: 280vh;
+                column-gap: 2vh;
                 img {
-                    width:140px;
-                    height: 137px;
+                    width:100%;
+                    height: 100%;
+                    object-fit: cover;
                     border: 2px solid $font-color2;
-                    box-shadow: 5px 5px 7px $font-color8;
+                    box-shadow: 1px 1px 2px $font-color8;
                     
                 }
             }
