--- a/style2.css
+++ b/style2.css
@@ -6,12 +6,13 @@
 #container {
   display: -ms-grid;
   display: grid;
-  row-gap: 1vh;
+  row-gap: 3vh;
   background-image: url(https://www.lefthudson.com/wp-content/uploads/2019/11/white-background-wallpaper-awesome-white-wallpapers-in-hd-barbaras-hd-wallpapers-ideas-of-white-background-wallpaper.jpg);
   min-height: 70vh;
 }
 
 #container #mobile-header {
+  position: fixed;
   display: -ms-grid;
   display: grid;
   justify-items: center;
@@ -94,7 +95,6 @@
   -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   width: 100%;
-  height: 20vh;
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
 }
 
@@ -128,7 +128,8 @@
 #container #content {
   display: -ms-grid;
   display: grid;
-  min-height: 75vh;
+  margin-top: 22vh;
+  min-height: 90vh;
   width: 100%;
   row-gap: 5vh;
 }
@@ -188,16 +189,24 @@
   -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   min-height: 90vh;
-  row-gap: 4vh;
+  row-gap: 10vh;
   -webkit-column-gap: 4vw;
           column-gap: 4vw;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
 }
 
 #container #content #content-two .content-image {
-  width: 108px;
-  height: 108px;
+  width: 144px;
+  height: 144px;
   -webkit-box-shadow: 7px 7px 7px grey;
           box-shadow: 7px 7px 7px grey;
+}
+
+#container #content #content-two .h4tag {
+  font-size: large;
 }
 
 #container #content #content-two #content2-1 #atag-1, #container #content #content-two #content2-1 #atag-2, #container #content #content-two #content2-1 #atag-3, #container #content #content-two #content2-1 #atag-4, #container #content #content-two #content2-1 #atag-5, #container #content #content-two #content2-1 #atag-6, #container #content #content-two #content2-1 #atag-7, #container #content #content-two #content2-1 #atag-8, #container #content #content-two #content2-1 #atag-9, #container #content #content-two #content2-1 #atag-10, #container #content #content-two #content2-1 #atag-11, #container #content #content-two #content2-1 #atag-12, #container #content #content-two #content2-1 #atag-13,
@@ -372,6 +381,7 @@
   }
   #container #header {
     height: 25vh;
+    position: fixed;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: (minmax(40px, 1fr))[auto-fit];
@@ -405,6 +415,7 @@
         -ms-flex-align: center;
             align-items: center;
     text-align: center;
+    margin-top: 13vh;
   }
   #container #content #heading {
     font-size: xx-large;
