--- a/style2.scss
+++ b/style2.scss
@@ -6,10 +6,11 @@
 }
 #container {
     display:grid;
-    row-gap: 1vh;
+    row-gap: 3vh;
     background-image: url(https://www.lefthudson.com/wp-content/uploads/2019/11/white-background-wallpaper-awesome-white-wallpapers-in-hd-barbaras-hd-wallpapers-ideas-of-white-background-wallpaper.jpg);
     min-height: 70vh;
     #mobile-header {
+        position: fixed;
         display: grid;
         justify-items: center;
         align-items: center;
@@ -82,8 +83,6 @@
         display: none;
         grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
         width: 100%;
-        height:20vh;
-        
         background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
        
         h3 {
@@ -114,8 +113,8 @@
     }
     #content {
         display: grid;
-      
-        min-height: 75vh;
+        margin-top: 22vh;
+        min-height: 90vh;
         width: 100%;
         row-gap: 5vh;        
         #heading {
@@ -166,18 +165,25 @@
             display: grid;
             grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
             min-height:90vh;
-            row-gap: 4vh;
+            row-gap: 10vh;
             column-gap: 4vw;
+            align-items: center;
+            text-align: center;
            
             .content-image {
-                width:108px;
-                height: 108px;
+                width:144px;
+                height: 144px;
                 box-shadow: 7px 7px 7px $font-color8;
+              
+            }
+            .h4tag {
+                font-size:large;
             }
             #content2-1,#content2-2,#content2-3,#content2-4,#content2-5,#content2-6,#content2-7,#content2-8,#content2-9,
              #content2-10,#content2-11,#content2-12,#content2-13,#content2-14,#content2-15,#content2-16,#content2-17,
              #content2-18,#content2-19, #content2-20,#content2-21, #content2-22,#content2-23,#content2-24
              {
+               
                 #atag-1,#atag-2,#atag-3,#atag-4,#atag-5,#atag-6,#atag-7,#atag-8,#atag-9,#atag-10,#atag-11,#atag-12,#atag-13,
                 #atag-14,#atag-15,#atag-16,#atag-17,#atag-18,#atag-19,#atag-20,#atag-21,#atag-22,#atag-23,#atag-24 {
                     @include gridStyle();
@@ -204,6 +210,7 @@
         }
         #header{
             height:25vh;
+            position: fixed;
             h3 {
                 font-size:x-large ;
                 #pizza-logo {
@@ -230,6 +237,7 @@
             row-gap: 5vh;
             align-items: center;
             text-align: center;
+            margin-top: 13vh;
             #heading {
                 font-size: xx-large;
                 padding: 10px;
