--- a/style4.css
+++ b/style4.css
@@ -14,6 +14,7 @@
 #container #mobile-header {
   display: -ms-grid;
   display: grid;
+  position: fixed;
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -132,6 +133,7 @@
   width: 95%;
   margin-left: 2.5%;
   row-gap: 3vh;
+  margin-top: 22vh;
 }
 
 #container #content #content-1 {
@@ -204,6 +206,7 @@
   }
   #container #header {
     height: 25vh;
+    position: fixed;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: (minmax(40px, 1fr))[auto-fit];
@@ -228,6 +231,9 @@
     color: white;
     padding: 10px;
     font-size: medium;
+  }
+  #container #content {
+    margin-top: 15vh;
   }
   #container #content #content-1 #content-h3tag1 {
     font-size: 3em;
