--- a/style5.scss
+++ b/style5.scss
@@ -11,6 +11,7 @@
     min-height: 70vh;
     #mobile-header {
         display: grid;
+        position: fixed;
         justify-items: center;
         align-items: center;
         grid-template-columns: 2fr 4fr 2fr;
@@ -84,6 +85,7 @@
         width: 100%;
         height:20vh;
         
+        
         background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
        
         h3 {
@@ -118,6 +120,7 @@
         width: 95%;
         margin-left: 2.5%;
         row-gap: 4vh;
+        margin-top: 22vh;
         #content-1 {
             display: grid;
             justify-items: center;
@@ -209,6 +212,7 @@
         }
         #header{
             height:25vh;
+            position:fixed;
             h3 {
                 font-size:x-large ;
                 #pizza-logo {
@@ -234,6 +238,7 @@
             min-height: 300vh;
             width: 95%;
             row-gap: 3vh;
+            margin-top: 10vh;
             #content-1 {
                 row-gap: 4vh;
                 min-height: 50vh;
