--- a/style3.scss
+++ b/style3.scss
@@ -166,10 +166,9 @@
             align-items: center;
             a {
                 text-decoration: none;
-                background-color: $font-color5;
-                color: $font-color6;
+                color: $font-color5;
                 padding: 10px;
-                font-size: medium;
+                font-size: x-large;
             }
         }
         #content {
