--- a/style.scss
+++ b/style.scss
@@ -247,10 +247,9 @@
             align-items: center;
             a {
                 text-decoration: none;
-                background-color: $font-color5;
-                color: $font-color6;
+                color: $font-color5;
                 padding: 10px;
-                font-size: medium;
+                font-size:x-large ;
             }
         }
         #content {
@@ -323,8 +322,8 @@
             align-items: center;
             justify-items: center;
             width: 100%;
-            
-          
+            position: fixed;
+            z-index:2;
             h3 {
                 display: none;
                 
@@ -358,6 +357,7 @@
            display: grid;
             width: 99%;
             min-height: 80vh;
+            margin-top: 12vh;
             #content-1,#content-2,#content-3,#content-4 {
                 display: none;
     
