--- a/style4.css
+++ b/style4.css
@@ -227,10 +227,9 @@
   }
   #container #header a {
     text-decoration: none;
-    background-color: darkred;
-    color: white;
+    color: darkred;
     padding: 10px;
-    font-size: medium;
+    font-size: x-large;
   }
   #container #content {
     margin-top: 15vh;
