--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import "_variables";
+@import "_mixins";
 * {
     margin: 0;
     padding: 0;
@@ -74,38 +75,21 @@
 
         }
     }
-   
     #header {
-       
-        display: grid;
-        display: none;
-        grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-        width: 100%;
-        height:20vh;
-        background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
+        display: none;       
         h3 {
-            font-size: larger;
-            text-align: center;
-            position: relative;
             #pizza-logo {
                 position: absolute;
                 top:0;
                 left: 0;
+
             }
             
         }
         #pizza-logo-two {
             display: none;
         }
-        a{
-            color: $font-color1;
-            font-weight: bolder;
-            font-size:smaller;
-            transition: font-size 0.25s ease-in-out;
-            text-decoration: none;
-        }
+      
         
     }
     #content {
@@ -232,8 +216,13 @@
         #header{
             height:25vh;
             position: fixed;
+            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
             h3 {
                 font-size:x-large ;
+                text-align: center;
+                position: relative;
+                font-weight: bolder;
+                font-family: 'Source Serif Pro', serif;
                 #pizza-logo {
                     width:27%;
                     margin-top: 2.5vh;
@@ -245,11 +234,14 @@
             font-size: larger;
             justify-items: center;
             align-items: center;
+            width: 100%;
             a {
                 text-decoration: none;
                 color: $font-color5;
                 padding: 10px;
-                font-size:x-large ;
+                font-size: x-large;
+                font-weight: bolder;
+            transition: font-size 0.25s ease-in-out;
             }
         }
         #content {
@@ -295,10 +287,7 @@
             }
         }
         #footer {
-                font-size:large;
-                align-items: center;
-                justify-items: center;
-                height: 10vh;
+               @include footerProperty ();
                 #footerdiv-one {
                     margin-left: 5vw;
                     a {
